[package]
name = "sheetruby"
version = "0.1.0"
edition = "2024"

[dependencies]
mrubyedge = { version = "1.1.8", default-features = false }
mruby-compiler2-sys = { version = "0.3.0", default-features = false }
# mruby-math = "0.1.0"

[profile.dev]
# FIXME: unccomment 
# panic = "abort" # Reduce panic handling overhead

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization with single codegen unit
strip = true      # Strip symbols
panic = "abort"   # Reduce panic handling overhead
